--- a/src/output.css
+++ b/src/output.css
@@ -598,10 +598,6 @@ video {
   bottom: 0px;
 }
 
-.bottom-14 {
-  bottom: 3.5rem;
-}
-
 .bottom-4 {
   bottom: 1rem;
 }
@@ -616,10 +612,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.top-10 {
-  top: 2.5rem;
 }
 
 .z-\[1000\] {
@@ -644,16 +636,17 @@ video {
   margin-right: auto;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
 
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-
-.me-\[52px\] {
-  margin-inline-end: 52px;
 }
 
 .mt-10 {
@@ -668,6 +661,10 @@ video {
   display: grid;
 }
 
+.h-2\/3 {
+  height: 66.666667%;
+}
+
 .h-24 {
   height: 6rem;
 }
@@ -680,10 +677,8 @@ video {
   height: 500px;
 }
 
-.h-fit {
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+.h-\[82vh\] {
+  height: 82vh;
 }
 
 .h-screen {
@@ -766,6 +761,10 @@ video {
   gap: 1.5rem;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -781,6 +780,10 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-cyan-800\/40 {
+  background-color: rgb(21 94 117 / 0.4);
 }
 
 .bg-gray-100 {
@@ -809,24 +812,8 @@ video {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
-}
-
-.from-indigo-500 {
-  --tw-gradient-from: #6366f1 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(99 102 241 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-indigo-900 {
-  --tw-gradient-from: #312e81 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(49 46 129 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-primary {
@@ -835,8 +822,8 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-primary\/30 {
-  --tw-gradient-from: rgba(var(--color-primary), 0.3) var(--tw-gradient-from-position);
+.from-primary\/70 {
+  --tw-gradient-from: rgba(var(--color-primary), 0.7) var(--tw-gradient-from-position);
   --tw-gradient-to: rgba(var(--color-primary), 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
@@ -853,14 +840,9 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-purple-500 {
-  --tw-gradient-to: rgb(168 85 247 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #a855f7 var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
-.via-purple-900 {
-  --tw-gradient-to: rgb(88 28 135 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), #581c87 var(--tw-gradient-via-position), var(--tw-gradient-to);
+.via-primary {
+  --tw-gradient-to: rgba(var(--color-primary), 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), rgba(var(--color-primary), 1) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-transparent {
@@ -872,8 +854,8 @@ video {
   --tw-gradient-to: #a5f3fc var(--tw-gradient-to-position);
 }
 
-.to-cyan-200\/30 {
-  --tw-gradient-to: rgb(165 243 252 / 0.3) var(--tw-gradient-to-position);
+.to-cyan-200\/70 {
+  --tw-gradient-to: rgb(165 243 252 / 0.7) var(--tw-gradient-to-position);
 }
 
 .to-cyan-200\/80 {
@@ -884,20 +866,13 @@ video {
   --tw-gradient-to: #f3f4f6 var(--tw-gradient-to-position);
 }
 
-.to-pink-500 {
-  --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
-}
-
-.to-pink-900 {
-  --tw-gradient-to: #831843 var(--tw-gradient-to-position);
-}
-
 .object-cover {
   object-fit: cover;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-3 {
@@ -933,6 +908,15 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .text-center {
@@ -1171,6 +1155,14 @@ body {
 }
 
 @media (min-width: 768px) {
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:w-2\/4 {
+    width: 50%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1183,6 +1175,10 @@ body {
 }
 
 @media (min-width: 1280px) {
+  .xl\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
