--- a/src/output.css
+++ b/src/output.css
@@ -602,6 +602,14 @@ video {
   bottom: 1rem;
 }
 
+.bottom-44 {
+  bottom: 11rem;
+}
+
+.bottom-52 {
+  bottom: 13rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -616,6 +624,10 @@ video {
 
 .z-\[1000\] {
   z-index: 1000;
+}
+
+.z-\[500\] {
+  z-index: 500;
 }
 
 .z-\[9999\] {
@@ -638,10 +650,6 @@ video {
 
 .my-10 {
   margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.mb-10 {
   margin-bottom: 2.5rem;
 }
 
@@ -681,12 +689,12 @@ video {
   height: 82vh;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-full {
   height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .w-\[100\%\] {
@@ -914,15 +922,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.pb-16 {
-  padding-bottom: 4rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -932,8 +931,16 @@ video {
   line-height: 2rem;
 }
 
+.text-\[10rem\] {
+  font-size: 10rem;
+}
+
 .text-\[2rem\] {
   font-size: 2rem;
+}
+
+.text-\[3rem\] {
+  font-size: 3rem;
 }
 
 .text-lg {
@@ -1060,9 +1067,16 @@ body {
   font-optical-sizing: auto;
   font-weight: normal;
   font-style: normal;
-  font-size: 1.5rem;
   display: inline-block;
-  padding: 10px;
+  transition: transform 0.3s ease;
+}
+
+#heroLogo {
+  font-family: "Forte", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+  display: inline-block;
   transition: transform 0.3s ease;
 }
 
@@ -1079,7 +1093,20 @@ body {
   bottom: -5px;
   border: 2px solid #fff;
   border-radius: 9999px;
-  animation: outlineAnimation 0.5s infinite alternate;
+  animation: outlineAnimation 0.5s
+  infinite alternate;
+}
+
+.shadow-text {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.gradient-shadow-text {
+  background: -webkit-linear-gradient(#effd2c, #d49d04);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
 }
 
 @keyframes outlineAnimation {
