--- a/src/output.css
+++ b/src/output.css
@@ -947,6 +947,10 @@ video {
   background-color: rgb(21 94 117 / var(--tw-bg-opacity));
 }
 
+.bg-primary\/70 {
+  background-color: rgba(var(--color-primary), 0.7);
+}
+
 .bg-opacity-0 {
   --tw-bg-opacity: 0;
 }
