--- a/src/output.css
+++ b/src/output.css
@@ -748,6 +748,14 @@ video {
   height: 100;
 }
 
+.min-h-\[\] {
+  min-height: ;
+}
+
+.min-h-\[100vh\] {
+  min-height: 100vh;
+}
+
 .w-28 {
   width: 7rem;
 }
